# qcal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: publish.yml  release.yml
Examples/Tutorials/: 1_Configuration_Management.ipynb  1_configuration_management.ipynb  2_Spectroscopy.ipynb
Examples/config/: config.yaml
qcal/: __init__.py  circuit.py  circuits.py  config.py  gates.py  results.py  settings.py  units.py  utils.py
qcal/_vendor/: __init__.py
qcal/_vendor/pyrpe/: NOTICE  README.md  __init__.py  _circular.py  classical.py  quantum.py
qcal/analysis/: leakage.py
qcal/backend/qubic/: channel_config.json  gmm_manager.pkl  post_process.py  qpu.py  readout.py  transpiler.py  utils.py
qcal/benchmarking/: __init__.py  cb.py  irb.py  mcb.py  mirror_circuit_benchmarking.py  pb.py  pnr.py  rb.py  readout.py  utils.py  xeb.py
qcal/calibration/: calibration.py  cz.py  leakage.py  readout.py  single_qubit.py  sweep.py  utils.py
qcal/characterization/: characterize.py  coherence.py  phase_estimation.py  readout.py
qcal/characterization/phase_estimation/: analysis.py  circuits.py  rpe.py  zz.py
qcal/characterization/spectroscopy/: qubit.py  resonator.py  sweep.py  utils.py
qcal/characterization/tomography/: analysis.py  gst.py  truth_table.py
qcal/compilation/: __init__.py  compiler.py
qcal/compilation/trueq/: compiler.py
qcal/dag/: dag.py
qcal/default_experiments/CRB_Q(0, 1)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(0, 1)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(0, 9)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(0, 9)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(1, 10)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(1, 10)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(1, 2)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(1, 2)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(10, 11)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(10, 11)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(10, 19)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(10, 19)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/default_experiments/CRB_Q(100, 101)_depths_2_4_8_32_64_ncircs_30_randout/data/: dataset.txt
qcal/default_experiments/CRB_Q(100, 101)_depths_2_4_8_32_64_ncircs_30_randout/edesign/: all_circuits_needing_data.txt  circuit_lists0.txt  circuit_lists1.txt  circuit_lists2.txt  circuit_lists3.txt  circuit_lists4.txt  idealout_lists.json  meta.json  native_gate_count_lists.json
qcal/examples/: ClassificationManager.pkl  config.yaml  config_X4Y2.yaml  config_X6Y2.yaml  config_X6Y3.yaml  config_saved.yaml  qubic_config.yaml
qcal/fitting/: fit.py  fit_functions.py  utils.py
qcal/gate/: gate.py  single_qubit.py  two_qubit.py
qcal/gates/: gate.py  single_qubit.py  two_qubit.py
qcal/interface/: __init__.py
qcal/interface/bqskit/: compiler.py  transpiler.py
qcal/interface/pygsti/: circuits.py  compiler.py  datasets.py  processor_spec.py  reports.py  transpiler.py
qcal/interface/pyquil/: transpiler.py  utils.py
qcal/interface/qubic/: __init__.py  gmm_manager.pkl  post_process.py  qpu.py  qubic.py  qubic_config.json  qubic_qpu.py  transpiler.py
qcal/interface/qubit_control/: __init__.py  qpu.py  transpiler.py
qcal/interface/superstaq/: compiler.py  transpiler.py
qcal/interface/trueq/: compiler.py  transpiler.py  utils.py
qcal/machine_learning/: clustering.py  utils.py
qcal/managers/: classification_manager.py  data_manager.py
qcal/math/: entropy.py  probability.py  utils.py
qcal/optimization/: optimize.py  optimizers.py  pulse.py
qcal/plotting/: bloch_sphere.py  cdf.py  frequency.py  graphs.py  sequence.py  utils.py
qcal/post_processing/: passes.py  post_process.py  utils.py
qcal/qpu/: qpu.py
qcal/sequence/: dynamical_decoupling.py  pulse_envelopes.py  utils.py
qcal/sequencer/: dynamical_decoupling.py  pulse_envelopes.py  utils.py
qcal/transpilation/: __init__.py  transpilation.py  transpiler.py  utils.py
scripts/: release.py
(+3125 files in other folders)
