[metadata]
name = qcal
version = 0.0.1
description = Quantum Calibration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akelhashim/quantum-calibration/
author = Akel Hashim
author_email = ahashim@berkeley.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
keywords = circuit gate quantum calibration
project_urls =
    Bug Tracker = https://github.com/akelhashim/quantum-calibration/issues
    Source Code = https://github.com/akelhashim/quantum-calibration/

[options]
packages = find:
install_requires =
    numpy
    pandas
    bqskit>=1.1.0a3
    scipy
    sympy
    pygsti
    matplotlib
    plotly
    qiskit
    networkx
    pyyaml
    ipython
	qubic
python_requires = >=3.8, <4

