[metadata]
name = qcal
version = 0.0.1
description = Quantum Calibration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akelhashim/quantum-calibration/
author = Akel Hashim
author_email = ahashim@berkeley.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
keywords = circuit gate quantum calibration
project_urls =
    Bug Tracker = https://github.com/akelhashim/quantum-calibration/issues
    Source Code = https://github.com/akelhashim/quantum-calibration/

[options]
packages = find:
install_requires =
    numpy>=1.25.0
    pandas>=2.0.2
    bqskit>=1.1.0a3
    scipy>=1.10.1
    sympy>=1.12
    matplotlib>=3.7.1
    plotly>=5.15.0
    networkx>=3.1
    pyyaml>=6.0
    ipython>=8.14.0
python_requires = >=3.10, <4

